--- a/templates/events/user_registrations.html
+++ b/templates/events/user_registrations.html
@@ -15,7 +15,7 @@
                         <h5>{{ registration.event.title }}</h5>
                         <p class="text-muted">{{ registration.event.date|date:"d M Y, H:i" }}</p>
                         <p>{{ registration.event.location }}</p>
-                        <a href="{% url 'event_detail' registration.event.pk %}" class="btn btn-primary btn-sm">
+                        <a href="{% url 'events:event_detail' registration.event.pk %}" class="btn btn-primary btn-sm">
                             Подробнее
                         </a>
                     </div>
